# mono

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  turbo.json
apps/api/: README.md  package.json  pyproject.toml
apps/api/api/: __init__.py  main.py
apps/api/api/routers/: health.py  items.py
apps/desktop/: BUILD_FIXES.md  README.md  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: README.md  package.json  svelte.config.js  tailwind.config.ts
apps/web/src/lib/components/charts/: BarChart.svelte  LineChart.svelte
apps/web/src/lib/components/ui/: badge.svelte  button.svelte  input.svelte
apps/web/src/routes/: +page.svelte
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md
scripts/: setup.sh
