[project]
name = "api"
version = "0.1.0"
description = "FastAPI 后端服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
dev = "uvicorn api.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn api.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
